# tetris-discord

./: .gitignore  CONTRIBUTING.md  README.md  config.sample.yaml  config_defaults.json  docs.py  pyproject.toml  redis.conf  tox.ini
.github/workflows/: lint.yml  test.yml
bot/: __main__.py  config.py  config.pyi  controls.py  db.py
bot/engine/: __init__.py  encoder.py  mixins.py
bot/exts/: admin.py  error_handler.py  manager.py  maps.py  settings.py  stats.py  tetris.py  updater.py
bot/exts/modes/: marathon.py  zen.py
bot/exts/tetris/: manager.py  maps.py  settings.py  stats.py  zen.py
bot/lib/: __init__.py  consts.py  controls.py  game.py  maps.py
bot/modes/: __init__.py  base.py  zen.py
bot/utils/: formatting.py
docs/: CNAME  _redirects  index.html  main.css  main.js
engine/: __init__.py  encoder.py  mixins.py
src/: __main__.py  bot.py  config.py  db.py
src/exts/: dev.py  tetris.py
