[tool.poetry]
name = "tetris"
version = "0.2.0-alpha.0"
description = "i have too much free time"
authors = ["Sofia \"dzshn\" N. L. <zshn@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.21.2"
psutil = "^5.8.0"
yade = {git = "https://github.com/dzshn/yade", rev = "main"}
aioredis = "^2.0.0"
fakeredis = "^1.6.1"
redis = "^3.5.3"
hiredis = "^2.0.0"
PyYAML = "^6.0"
types-redis = "^3.5.15"
types-psutil = "^5.8.13"
nextcord = {git = "https://github.com/nextcord/nextcord", rev = "8c8bbb0868512d626cb6b624761d22ff2602d1af", extras = ["speed"]}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
black = "^21.9b0"
mypy = "^0.910"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "google"
force_sort_within_sections = false

[tool.mypy]
namespace_packages = true
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
allow_redefinition = true # Remove later?

[[tool.mypy.overrides]]
module = 'fakeredis.*'
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
