[tool.poetry]
name = "tetris-bot"
version = "0.2.0-alpha.0"
description = "i have too much free time"
authors = ["Sofia \"dzshn\" N. L. <zshn@pm.me>"]
readme = "README.md"
homepage = "https://td.dzshn.xyz"
repository = "https://github.com/dzshn/tetris-discord"
license = "MIT"
packages = [
    { include = 'src' }
]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.21.2"
psutil = "^5.8.0"
aioredis = "^2.0.0"
fakeredis = "^1.6.1"
redis = "^3.5.3"
hiredis = "^2.0.0"
PyYAML = "^6.0"
hikari = "^2.0.0-alpha.105"
hikari-lightbulb = "^2.1.3"
tetris = {git = "https://github.com/dzshn/python-tetris", rev = "main"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
black = "^21.9b0"
tox = "^3.24.5"

[tool.black]

[tool.isort]
profile = "google"
force_sort_within_sections = false

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = 'fakeredis.*'
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
