[tool.poetry]
name = "tetris"
version = "0.2.0-alpha.0"
description = "i have too much free time"
authors = ["Sofia \"dzshn\" N. L. <zshn@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
numpy = "^1.22.3"
tinydb = "^4.7.0"
psutil = "^5.9.0"
yade = {git = "https://github.com/dzshn/yade", rev = "main"}

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
flake8 = "^4.0.1"
rope = "^0.20.1"
isort = "^5.10.1"

[tool.yapf]
based_on_style = "google"
column_limit = 110
blank_line_before_nested_class_or_def = false
dedent_closing_brackets = true
split_before_dot = true
coalesce_brackets = true

[tool.isort]
profile = "google"
force_sort_within_sections = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
